[gd_scene load_steps=10 format=3 uid="uid://c4y0hby12frp"]

[ext_resource type="Theme" uid="uid://tjw11djg71fg" path="res://Menus/Assets/custom_menu_theme.tres" id="1_3g5s3"]
[ext_resource type="Script" path="res://Menus/Scripts/adventure_mode_menu.gd" id="1_o4pn8"]
[ext_resource type="FontFile" uid="uid://n7lo661wrh6j" path="res://Menus/Assets/PixCon.ttf" id="3_ny8py"]
[ext_resource type="Theme" uid="uid://ctl7ud287nf8v" path="res://Menus/Assets/new_theme_2.tres" id="3_q12hv"]
[ext_resource type="Shortcut" uid="uid://bxhii5ft060ju" path="res://Menus/Assets/esc_shortcut.tres" id="4_x7jjv"]
[ext_resource type="Theme" uid="uid://bac8sgdadgnsw" path="res://Menus/Assets/title.tres" id="5_7epd2"]
[ext_resource type="Theme" uid="uid://cev1ytll8j8mi" path="res://Menus/Assets/adventure_mode_menu.tres" id="7_b2is6"]
[ext_resource type="Shortcut" uid="uid://bn0m5b5lyaepg" path="res://Menus/Assets/enter_shortcut.tres" id="9_jhuri"]

[sub_resource type="Theme" id="Theme_hg63g"]

[node name="AdventureModeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o4pn8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
theme = ExtResource("1_3g5s3")

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(130, 130)
layout_mode = 2
theme = ExtResource("3_q12hv")
theme_override_font_sizes/font_size = 65
shortcut = ExtResource("4_x7jjv")
text = "<<"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 35

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("5_7epd2")
bbcode_enabled = true
text = "[center]Adventure mode"
fit_content = true
autowrap_mode = 0

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(165, 0)
layout_mode = 2
theme = ExtResource("3_q12hv")
text = "Score"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ny8py")
theme_override_font_sizes/font_size = 25
text = "A collection of levels with no breaks
 upgrades throughout, good luck"
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("7_b2is6")
theme_override_constants/separation = 200
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2

[node name="VSlider" type="VSlider" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_hg63g")
max_value = 5.0
value = 2.0
tick_count = 6
ticks_on_borders = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label6" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Death"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Extreme"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Hard"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Medium"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Easy"
horizontal_alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Baby"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
text = "Customize:"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
text = "Length:"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "20"

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
min_value = 1.0
max_value = 50.0
value = 20.0
ticks_on_borders = true

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2"]
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
text = "Upgrades:"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
text = "5"

[node name="HSlider2" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 5.0
tick_count = 10
ticks_on_borders = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2"]
layout_mode = 2

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "Lives:"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "3"

[node name="HSlider3" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 3.0
tick_count = 10
ticks_on_borders = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("7_b2is6")
theme_override_constants/separation = 125
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 25
theme_override_constants/margin_bottom = 60

[node name="InfoLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ny8py")
theme_override_font_sizes/font_size = 25
text = "A fair selection of 20 levels, with evenly placed upgrades"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_q12hv")
theme_override_font_sizes/font_size = 50
shortcut = ExtResource("9_jhuri")
text = "Play"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer/VSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2/HSlider" to="." method="_on_length_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2/HSlider2" to="." method="_on_upgrades_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2/HSlider3" to="." method="_on_h_slider_3_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
